<resources>
    <string name="app_name">AppOfPetr</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="about_version">Version</string>
    <string name="about_version_no">0.1</string>
    <string name="about_button_ok">OK</string>
    <string name="about_activity_storage_count">Storage count</string>
    <string name="about_activity_sqlite_count">SQLite count</string>
    <string name="action_about_close">Close</string>
    <string name="action_browser">Browser</string>
    <string name="action_browser_url">http://www.google.com</string>
    <string name="action_calc">Calc</string>
    <string name="title_activity_calc">Calc</string>
    <string name="action_calc_close">Close</string>
    <string name="action_storage">Storage</string>
    <string name="title_activity_storage">Storage</string>
    <string name="action_storage_close">Close</string>
    <string name="storage_button_open_file">Open file</string>
    <string name="storage_button_save_file">Save file</string>
    <string name="storage_button_delete_file">Delete file</string>
    <string name="storage_button_list_file">List files</string>
    <string name="storage_button_get_files_dir">Get files dir</string>
    <string name="storage_readable_external">Readable external</string>
    <string name="storage_writable_external">Writable external</string>
    <string name="storage_rbn_internal_files">Internal files</string>
    <string name="storage_rbn_internal_cache">Internal cache</string>
    <string name="storage_rbn_external_files">External files</string>
    <string name="storage_rbn_external_storage">External storage</string>
    <string name="storage_edtFileName_hint">file name</string>
    <string name="action_sqlite">SQLite</string>
    <string name="title_activity_sqlite">SQLite</string>
    <string name="action_sqlite_close">Close</string>
    <string name="sqlite_button_persist_rec">Save</string>
    <string name="sqlite_button_get_rec">Get</string>
    <string name="sqlite_button_list_rec">List</string>
    <string name="sqlite_button_delete_rec">Delete</string>
</resources>
