<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.et4334.appofpetr.SqliteActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlite_button_persist_rec"
        android:id="@+id/btnPersistRec"
        android:onClick="onClickBtnInsertRecord"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlite_button_get_rec"
        android:id="@+id/btnGetRec"
        android:onClick="onClickBtnGetRecord"
        android:layout_alignTop="@+id/btnPersistRec"
        android:layout_toEndOf="@+id/btnPersistRec" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlite_button_delete_rec"
        android:id="@+id/btnDeleteRec"
        android:onClick="onClickBtnDeleteRecord"
        android:layout_alignTop="@+id/btnPersistRec"
        android:layout_toEndOf="@+id/btnGetRec" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlite_button_list_rec"
        android:id="@+id/btnListRecs"
        android:onClick="onClickBtnListRecords"
        android:layout_alignTop="@+id/btnPersistRec"
        android:layout_toEndOf="@+id/btnDeleteRec" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtId"
        android:layout_below="@+id/btnPersistRec"
        android:layout_alignStart="@+id/btnPersistRec"
        android:layout_alignEnd="@+id/btnPersistRec" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtName"
        android:layout_alignTop="@+id/edtId"
        android:layout_toEndOf="@+id/edtId" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/edtName"
        android:layout_alignParentStart="true" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtResult"
            android:layout_alignParentStart="true" />

    </ScrollView>


</RelativeLayout>
